tests/ui/missing_non_modrs_mod/missing_non_modrs_mod_inline.rs
mod foo_inline;
fn main() {}

//~? ERROR file not found for module `missing`
